--- a/public/docs/css/screen.css
+++ b/public/docs/css/screen.css
@@ -62,11 +62,7 @@ margin-top: 20px;
 /*#navigation{
 	text-indent: -9999px; 
 }*/
-a#audioBtn {
-	background: url(../navButtons/audio_button.png); 
-	width: 154px; 
-	height: 55px;
-    }
+
 /*
 a#audioBtn:hover {
 	background: url('button.png') no-repeat bottom; 
@@ -77,7 +73,11 @@ a#audioBtn:hover {
 
 }
 */
-
+#navigation li.selected a{
+	border: 0px;
+color: #464646;
+border-bottom: 1px solid #ccc;
+cursor: default;}
 
 body { 
 	/*background: url('photo.png') no-repeat center center fixed;*/
