--- a/templates/page.html
+++ b/templates/page.html
@@ -69,6 +69,9 @@
   audiojs.events.ready(function() {
     var as = audiojs.createAll();
   });
+  $('li').click(function(){
+  $(this).addClass('active');
+});
 </script>
 
  
