--- a/public/docs/css/screen.css
+++ b/public/docs/css/screen.css
@@ -66,15 +66,15 @@ margin-top: 20px;
 
 
 
-#navigation li.selected a{
+#navigation li:active{
 	border: 0px;
 color: #464646;
 border-bottom: 1px solid #ccc;
 cursor: default;}
 
 body { 
-	/*background: url('photo.png') no-repeat center center fixed;*/
-	background: url('http://24.media.tumblr.com/8e5fdc3046b92125fe4b6325089f5185/tumblr_mj2542uVMO1rrfowao1_500.jpg') no-repeat center center fixed;
+	background: url('photo.png') no-repeat center center fixed;
+	/*background: url('http://24.media.tumblr.com/8e5fdc3046b92125fe4b6325089f5185/tumblr_mj2542uVMO1rrfowao1_500.jpg') no-repeat center center fixed;*/
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
