--- a/templates/partials/navigation/navigation.html
+++ b/templates/partials/navigation/navigation.html
@@ -1,7 +1,7 @@
 <ul id="navigation">
-    <li rel="pagez/audio"><a href="?/pagez/audio" id="audioBtn"><img src="./public/docs/navButtons/audio_button.png" >Audio</a></li>
-    <li rel="pagez/video"><a href="?/pagez/video/" id="videoBtn"><img src="./public/docs/navButtons/video_button.png" >Video</a></li>
-    <li rel="pagez/clients"><a href="?/pagez/clients/" id="clientsBtn"><img src="./public/docs/navButtons/clients_button.png" >Clients</a></li>
-    <li rel="pagez/photos"><a href="?/pagez/photos/" id="photosBtn"><img src="./public/docs/navButtons/photos_button.png">Photos</a></li>
+    <li rel="pagez/audio"><a href="?/pagez/audio" id="audioBtn"><img src="./public/docs/navButtons/audio_button.png" ></a></li>
+    <li rel="pagez/video"><a href="?/pagez/video/" id="videoBtn"><img src="./public/docs/navButtons/video_button.png" ></a></li>
+    <li rel="pagez/clients"><a href="?/pagez/clients/" id="clientsBtn"><img src="./public/docs/navButtons/clients_button.png" ></a></li>
+    <li rel="pagez/photos"><a href="?/pagez/photos/" id="photosBtn"><img src="./public/docs/navButtons/photos_button.png"></a></li>
 </li>
 </ul>
